# miband-bot

./: .dockerignore  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README_EN.md  SECURITY.md  VENDORED.md  compose.yaml  fitness_bot.py  install.ps1  install.sh  miband_sync.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  secrets.env.example  setup.bat  setup.sh
.github/workflows/: ci.yml
mi-fitness-python/: .gitignore  .pre-commit-config.yaml  README.md  cliff.toml  justfile  pyproject.toml
mi-fitness-python/.github/workflows/: ci.yml  release.yml
mi-fitness-python/examples/: basic_usage.py
mi-fitness-python/src/mi_fitness/: __init__.py  cli.py  const.py  crypto.py  exceptions.py  http.py  models.py
mi-fitness-python/src/mi_fitness/auth/: __init__.py  _helpers.py  manager.py  passtoken.py  password.py  qr.py  sts.py
mi-fitness-python/src/mi_fitness/client/: __init__.py  api.py  base.py  data.py  messages.py  relatives.py
mi-fitness-python/tests/unit/: conftest.py  test_auth.py  test_auth_helpers.py  test_cli.py  test_client.py  test_client_base.py  test_const.py  test_crypto.py  test_exceptions.py  test_http.py  test_models.py
miband_tracker/: __init__.py  config.py  fds.py  lock.py  secure_files.py  stdio.py  storage.py  sync.py
miband_tracker/bot/: __init__.py  app.py  formatting.py
tests/: test_bot_ui.py  test_config.py  test_dynamic_whitelist.py  test_fds.py  test_lock.py  test_secure_files.py  test_stdio.py  test_storage.py  test_sync.py
